# pdf2conta

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  compose.qwen-vl.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentic/: PIANO_ec_graph.md  README.md  __init__.py  graph.py  requirements.txt  state.py  validators.py
ec_converter/: Dockerfile  GESTIONE.md  app.py  causali.json  csv_exporter.py  normalizer.py  pipeline.py  replace_descrizioni.json  requirements.txt  test_correggi_segno.py
ec_converter/templates/: __init__.py  base.py  bnl.py  bnl_lista_movimenti.py  bnl_pos.py  intesa_sanpaolo.py  intesa_sanpaolo_ufficiale.py
fatture_converter/: Dockerfile  csv_exporter.py  fattura.py  process_fatture.py  requirements.txt
processor/: Dockerfile  process.py  requirements.txt
tests/: test_correggi_segno.py  test_csv_exporter.py  test_fattura.py  test_normalizer.py  test_templates.py  test_templates_bnl_pos.py
ui/: Dockerfile  app.py
